<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:layout_marginBottom="10dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSecondary"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        android:transitionName="layout_transition">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre" />

            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:gravity="right"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edad" />

            <EditText
                android:id="@+id/edad"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nacionalidad" />

            <TextView
                android:id="@+id/nacionalidad"
                android:layout_width="match_parent"
                android:gravity="right"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorSecondary"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColor="#DDDDDD"
                android:transitionName="delete_button_transition"
                card_view:backgroundTint="@color/colorAccent" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/cambioIdioma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/changeNationality"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColor="#DDDDDD"
                android:transitionName="delete_button_transition"
                card_view:backgroundTint="@color/colorAccent" />

        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>