<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:layout_marginBottom="10dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="6dp">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorSecondary"
        android:orientation="vertical"
        android:padding="@dimen/padding"
        android:transitionName="layout_transition">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/entrenador"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content" />

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nEntrenamientos" />

            <TextView
                android:id="@+id/nEntrenamientos"
                android:layout_width="match_parent"
                android:gravity="right"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vMedia" />

        <TextView
            android:id="@+id/velocidadMedia"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distTotal" />

            <TextView
                android:id="@+id/distTotal"
                android:layout_width="match_parent"
                android:gravity="right"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/velocidadMedia" />

            <TextView
                android:id="@+id/tiempoTotal"
                android:layout_width="match_parent"
                android:gravity="right"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorSecondary"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/back"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColor="#DDDDDD"
                android:transitionName="delete_button_transition"
                card_view:backgroundTint="@color/colorAccent" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:textColor="@color/textColor"
                android:textSize="@dimen/text_size"
                android:transitionName="name_transition" />
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>